--- a/Deep_learning_with_Pytorch-1.ipynb
+++ b/Deep_learning_with_Pytorch-1.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "My attempt at providing a beginner's tutorial on pytorch. Unlike the ones in the internet or Pytorch website, we start with very basic ideas of tensor (the primary datatype) and go through designing simple feed forward networks with Pytorch. The tutorial requires only basic understanding of feed-forward network. When I was learning Pytorch I found out that almost all the tutorials started with RNNs, CNNs. For someone who had just started with deep learning, it was really difficlut to comprehend. I think, a tutorial should start from the very basics, getting familiar with the different modules in Pytorch and then taking the first step towards designing very simple feed-forward neural networks. Hence my motivation to create a tutorial like this. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Pytorch installation"
    ]
   },
@@ -1255,6 +1248,14 @@
    "outputs": [],
    "source": [
     "# Now design a classifier for MNIST putting together all the elements that we have learnt...."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pre-processed data available at \n",
+    "https://drive.google.com/drive/folders/11gOutVaBOxEROpNgZCmfE-ALrfI5ZeKr?usp=sharing"
    ]
   },
   {
