--- a/Deep_learning_with_Pytorch-1.ipynb
+++ b/Deep_learning_with_Pytorch-1.ipynb
@@ -365,7 +365,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = torch.sum(x*x)"
+    "y = torch.sum(x*x) "
    ]
   },
   {
@@ -374,7 +374,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y.backward()"
+    "y.backward() # calculates gradient of y wrt all variables (x in this example)"
    ]
   },
   {
@@ -391,7 +391,7 @@
     }
    ],
    "source": [
-    "print(x.grad)"
+    "print(x.grad) # dy/dx"
    ]
   },
   {
@@ -1256,6 +1256,15 @@
    "source": [
     "Pre-processed data available at \n",
     "https://drive.google.com/drive/folders/11gOutVaBOxEROpNgZCmfE-ALrfI5ZeKr?usp=sharing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check out the solution @ MNIST_with_mlp.ipynb"
    ]
   },
   {
