--- a/Deep_learning_with_Pytorch-2_CNNs.ipynb
+++ b/Deep_learning_with_Pytorch-2_CNNs.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hand-written digit recognition"
+    "# Hand-written digit recognition with CNNs"
    ]
   },
   {
@@ -63,17 +63,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [],
    "source": [
     "class MNIST_data(Dataset):\n",
     "    def __init__(self, data):\n",
     "        self.data = data\n",
-    "        s\n",
-    "    \n",
+    "        self.length = len(data)\n",
+    "        self.trans = transforms.ToTensor()\n",
+    "        \n",
     "    def __len__(self):\n",
-    "        return len"
+    "        return self.length\n",
+    "    \n",
+    "    def __getitem__(self, index):\n",
+    "        inp = self.trans(self.data[index][0])\n",
+    "        label = torch.tensor(self.data[index][1], dtype=torch.long)\n",
+    "        return inp, label\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 304,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data = MNIST_data(mnist_train)\n",
+    "test_data = MNIST_data(mnist_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Architecture"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"Images/cnn_img.jpeg\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 305,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Convnet(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(Convnet,self).__init__()\n",
+    "        \n",
+    "        self.conv_1 = nn.Conv2d(1,8,5) # n1 = 8 # for convolution operation\n",
+    "        self.conv_2 = nn.Conv2d(8,16,5) # n2 = 16\n",
+    "        self.maxpool = nn.MaxPool2d(2,2) # for pooling operation\n",
+    "        self.fc_3 = nn.Linear(16*4*4,24)\n",
+    "        self.fc_4 = nn.Linear(24,10)\n",
+    "        self.sigmoid = nn.Sigmoid()\n",
+    "        self.relu = nn.ReLU() # Activation function\n",
+    "        \n",
+    "    def forward(self,inp):\n",
+    "        out = self.conv_1(inp)\n",
+    "        out = self.relu(out)\n",
+    "        out = self.maxpool(out)\n",
+    "        out = self.conv_2(out)\n",
+    "        out = self.relu(out)\n",
+    "        out = self.maxpool(out)\n",
+    "        out = out.reshape(inp.shape[0],-1) # flatten the output, first argument is batch-size\n",
+    "        out = self.fc_3(out)\n",
+    "        out = self.relu(out)\n",
+    "        out = self.fc_4(out)\n",
+    "        out = self.sigmoid(out)\n",
+    "        return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 306,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf_cnn = Convnet()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 307,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(clf, train_data, test_data, epochs=20, learning_rate=0.0001):\n",
+    "    optimizer = opt.Adam(clf.parameters(), lr=learning_rate)\n",
+    "    criterion = nn.CrossEntropyLoss()\n",
+    "    \n",
+    "    for _ in range(epochs):\n",
+    "        \n",
+    "        for data, labels in DataLoader(train_data, batch_size=100, shuffle=True):\n",
+    "            out = clf(data)\n",
+    "            loss = criterion(out, labels)\n",
+    "            optimizer.zero_grad()\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            \n",
+    "        score = evaluate(clf, test_data)\n",
+    "        \n",
+    "        print(f\"accuracy after epoch {_}: {score}\")\n",
+    "        "
    ]
   },
   {
@@ -85,17 +190,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def evaluate(clf, test_data):\n",
+    "    \n",
+    "    true_labels = []\n",
+    "    inf_labels = []\n",
+    "    \n",
+    "    for data, labels in DataLoader(test_data, batch_size=100):\n",
+    "        out = clf(data)\n",
+    "        cls = torch.argmax(F.softmax(out, dim=1), dim=1)\n",
+    "        inf_labels.extend(cls.detach().numpy().tolist())\n",
+    "        true_labels.extend(labels.numpy().tolist())\n",
+    "\n",
+    "    \n",
+    "    return accuracy_score(true_labels, inf_labels)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 309,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy after epoch 0: 0.7659\n",
+      "accuracy after epoch 1: 0.8247\n",
+      "accuracy after epoch 2: 0.8688\n",
+      "accuracy after epoch 3: 0.8797\n",
+      "accuracy after epoch 4: 0.908\n",
+      "accuracy after epoch 5: 0.926\n",
+      "accuracy after epoch 6: 0.935\n",
+      "accuracy after epoch 7: 0.9393\n",
+      "accuracy after epoch 8: 0.9435\n",
+      "accuracy after epoch 9: 0.9451\n",
+      "accuracy after epoch 10: 0.9487\n",
+      "accuracy after epoch 11: 0.9501\n",
+      "accuracy after epoch 12: 0.9545\n",
+      "accuracy after epoch 13: 0.9567\n",
+      "accuracy after epoch 14: 0.9584\n",
+      "accuracy after epoch 15: 0.9587\n",
+      "accuracy after epoch 16: 0.9608\n",
+      "accuracy after epoch 17: 0.9643\n",
+      "accuracy after epoch 18: 0.9662\n",
+      "accuracy after epoch 19: 0.9642\n"
+     ]
+    }
+   ],
+   "source": [
+    "train(clf_cnn, train_data, test_data)"
+   ]
   },
   {
    "cell_type": "code",
@@ -287,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,68 +539,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(clf, train_data, val_data, epochs=10, learning_rate=0.0001):\n",
-    "    optimizer = opt.Adam(clf.parameters(), lr=learning_rate)\n",
-    "    criterion = nn.CrossEntropyLoss()\n",
-    "    \n",
-    "    for _ in range(epochs):\n",
-    "        \n",
-    "        for data, labels in DataLoader(train_data, batch_size=32, shuffle=True):\n",
-    "            out = clf(data)\n",
-    "            loss = criterion(out, labels)\n",
-    "            optimizer.zero_grad()\n",
-    "            loss.backward()\n",
-    "            optimizer.step()\n",
-    "        \n",
-    "        score = evaluate(clf, val_data)\n",
-    "        print(f\"Validation accuracy at epoch {_}: {score}\")    \n",
-    "            "
+    "# We will reuse the train and evaluat function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation accuracy at epoch 0: 0.6148955495004541\n",
-      "Validation accuracy at epoch 1: 0.6403269754768393\n",
-      "Validation accuracy at epoch 2: 0.6512261580381471\n",
-      "Validation accuracy at epoch 3: 0.662125340599455\n",
-      "Validation accuracy at epoch 4: 0.6584922797456857\n",
-      "Validation accuracy at epoch 5: 0.659400544959128\n",
-      "Validation accuracy at epoch 6: 0.6793823796548593\n",
-      "Validation accuracy at epoch 7: 0.6821071752951862\n",
-      "Validation accuracy at epoch 8: 0.6911898274296094\n",
-      "Validation accuracy at epoch 9: 0.6920980926430518\n"
+      "accuracy after epoch 0: 0.6121707538601272\n",
+      "accuracy after epoch 1: 0.6439600363306085\n",
+      "accuracy after epoch 2: 0.6357856494096276\n",
+      "accuracy after epoch 3: 0.6657584014532243\n",
+      "accuracy after epoch 4: 0.6748410535876476\n"
      ]
     }
    ],
    "source": [
     "train(clf, train_data, val_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 184,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def evaluate(clf, test_data):\n",
-    "    \n",
-    "    true_labels = []\n",
-    "    inf_labels = []\n",
-    "    \n",
-    "    for data, labels in DataLoader(test_data, batch_size=32):\n",
-    "        out = clf(data)\n",
-    "        cls = torch.argmax(F.softmax(out, dim=1), dim=1)\n",
-    "        inf_labels.extend(cls.detach().numpy().tolist())\n",
-    "        true_labels.extend(labels.numpy().tolist())\n",
-    "    \n",
-    "    return accuracy_score(true_labels, inf_labels)"
    ]
   },
   {
