--- a/Deep_learning_with_Pytorch-2_CNNs.ipynb
+++ b/Deep_learning_with_Pytorch-2_CNNs.ipynb
@@ -246,11 +246,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# CNNs for text classification"
+   ]
   },
   {
    "cell_type": "raw",
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,22 @@
       "accuracy after epoch 1: 0.6439600363306085\n",
       "accuracy after epoch 2: 0.6357856494096276\n",
       "accuracy after epoch 3: 0.6657584014532243\n",
-      "accuracy after epoch 4: 0.6748410535876476\n"
+      "accuracy after epoch 4: 0.6748410535876476\n",
+      "accuracy after epoch 5: 0.6775658492279746\n",
+      "accuracy after epoch 6: 0.6821071752951862\n",
+      "accuracy after epoch 7: 0.6712079927338783\n",
+      "accuracy after epoch 8: 0.6857402361489555\n",
+      "accuracy after epoch 9: 0.6839237057220708\n",
+      "accuracy after epoch 10: 0.6766575840145322\n",
+      "accuracy after epoch 11: 0.6902815622161671\n",
+      "accuracy after epoch 12: 0.6748410535876476\n",
+      "accuracy after epoch 13: 0.6911898274296094\n",
+      "accuracy after epoch 14: 0.6893732970027248\n",
+      "accuracy after epoch 15: 0.698455949137148\n",
+      "accuracy after epoch 16: 0.6920980926430518\n",
+      "accuracy after epoch 17: 0.6902815622161671\n",
+      "accuracy after epoch 18: 0.6875567665758402\n",
+      "accuracy after epoch 19: 0.6966394187102634\n"
      ]
     }
    ],
